<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.frezzcoding.savingsguru.functionalities.home.HomeFragment"
        tools:layout="@layout/fragment_home"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_homeFragment_to_scenarioFragment"
            app:destination="@id/scenarioFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.frezzcoding.savingsguru.functionalities.newscenario.NewScenarioFragment"
        tools:layout="@layout/fragment_newscenario"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_addFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.frezzcoding.savingsguru.functionalities.settings.SettingsFragment"
        tools:layout="@layout/fragment_settings"
        android:label="@string/app_name" />
    <fragment
        android:id="@+id/graphsFragment"
        android:name="com.frezzcoding.savingsguru.functionalities.graphs.GraphsFragment"
        tools:layout="@layout/fragment_graph"
        android:label="@string/app_name" />
    <fragment
        android:id="@+id/statsFragment"
        android:name="com.frezzcoding.savingsguru.functionalities.statistics.StatisticsFragment"
        tools:layout="@layout/fragment_statistics"
        android:label="@string/app_name" />
    <fragment
        android:id="@+id/scenarioFragment"
        tools:layout="@layout/fragment_scenario"
        android:name="com.frezzcoding.savingsguru.functionalities.scenarioview.ScenarioFragment"
        android:label="@string/app_name" >
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
</navigation>