<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fragment_graph_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.frezzcoding.savingsguru.customviews.LineGraph
            android:id="@+id/line_graph"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_margin="5dp"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_no_graph_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_data_for_graph"
            app:layout_constraintBottom_toTopOf="@id/recycler_savings"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_savings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_graph" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

